Fix GraalVM native with VirtualThreads in Quarkus